grammar.js
    translation_unit: $ => seq(
      repeat($._top_level_item),
      optional($.program),
    ),

    _top_level_item: $ => prec(2, choice(
      seq($.include_statement, $._end_of_statement),
      $.program,
      $.module,
      $.submodule,
      $.interface,
      $.subroutine,
      $.function,
      $.block_data,
      $.preproc_if,
      $.preproc_ifdef,
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
    )),

    // Preprocessor

    program: $ => seq(
      optional($.program_statement),
      repeat(
        choice(
          $._specification_part,
          alias($.preproc_if_in_specification_part, $.preproc_if),
          alias($.preproc_ifdef_in_specification_part, $.preproc_ifdef)
        ),
      ),
      repeat($._statement),
      optional($.internal_procedures),
      optional($.statement_label),
      $.end_program_statement,
      $._end_of_statement
    ),

    program_statement: $ => seq(caseInsensitive('program'), $._name, $._end_of_statement),
    end_program_statement: $ => blockStructureEnding1($, 'program', $._name),

    module_name: $ => $._name,

    function: $ => procedure($, $.function_statement, $.end_function_statement),

    function_statement: $ => seq(
      optional($._callable_interface_qualifers),
      caseInsensitive('function'),
      field('name', $._name),
      optional(field('parameters',$._parameters)),
      optional(repeat(choice(
        $.language_binding,
        $.function_result
      ))),
      $._end_of_statement,
    ),

    _callable_interface_qualifers: $ => repeat1(
      prec.right(1, choice(
        $.procedure_attributes,
        $.procedure_qualifier,
        field('type', $.intrinsic_type),
        field('type', $.derived_type)
      ))),

    procedure_attributes: $ => prec(1, seq(
      caseInsensitive('attributes'),
      '(',
      commaSep1(choice(
        caseInsensitive('global'),
        caseInsensitive('device'),
        caseInsensitive('host'),
        caseInsensitive('grid_global'))),
      ')'
    )),

    end_function_statement: $ => blockStructureEnding1($, 'function', $._name),

    _name: $ => alias($.identifier, $.name),

    _parameters: $ => choice(
      seq('(', ')'),
      $.parameters
    ),

    _specification_part: $ => prec(1, choice(
      // Split out so it can be used as a supertype
      seq($._specification_parts, $._end_of_statement),
      // These two can't be included in the above because or we
      // duplicate the end_of_statement in the end block rule
      $.interface,
      $.derived_type_definition,
      // This allows format statements in the specification part,
      // without making the statements rule particularly awkward
      prec(1, seq($.statement_label, $.format_statement, $._end_of_statement)),
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
      alias($.preproc_if_in_specification_part, $.preproc_if),
      alias($.preproc_ifdef_in_specification_part, $.preproc_ifdef),
      ';',
    )),

    use_statement: $ => seq(
      caseInsensitive('use'),
      choice(
        optional(
          seq(',', choice(caseInsensitive('intrinsic'), caseInsensitive('non_intrinsic')), '::')
        ),
        optional('::')
      ),
      alias($.identifier, $.module_name),
      optional(
        choice(
          seq(',', commaSep1($.use_alias)),
          $.included_items
        )
      ),
    ),

    variable_declaration: $ => seq(
      field('type', choice(
        $.intrinsic_type,
        $.derived_type,
        alias($.procedure_declaration, $.procedure),
        $.declared_type,
      )),
      optional(seq(',',
        commaSep1(
          field(
            'attribute',
            choice(
              $.type_qualifier,
              $.language_binding
            ))
        )
      )),
      optional('::'),
      $._declaration_targets,
    ),

    variable_modification: $ => seq(
      choice(
        alias($._standalone_type_qualifier, $.type_qualifier),
        $.variable_attributes,
      ),
      optional('::'),
      commaSep1(field('declarator', $._variable_declarator)),
    ),

    variable_attributes: $ => seq(
      caseInsensitive('attributes'),
      '(',
      choice(
        caseInsensitive('device'),
        caseInsensitive('managed'),
        caseInsensitive('constant'),
        caseInsensitive('shared'),
        caseInsensitive('pinned'),
        caseInsensitive('texture')),
      ')'
    ),

    _variable_declarator: $ => choice(
      $.identifier,
      $.sized_declarator,
      $.coarray_declarator,
    ),

    _declaration_targets: $ => commaSep1(field('declarator', choice(
      $._variable_declarator,
      alias($._declaration_assignment, $.init_declarator),
      alias($._declaration_pointer_association, $.pointer_init_declarator),
      $.data_declarator,
    ))),

    _intrinsic_type: $ => choice(
        caseInsensitive('byte'),
        caseInsensitive('integer'),
        caseInsensitive('real'),
        whiteSpacedKeyword('double', 'precision'),
        caseInsensitive('complex'),
        whiteSpacedKeyword('double', 'complex'),
        caseInsensitive('logical'),
        caseInsensitive('character'),
    ),

    intrinsic_type: $ => seq(
      $._intrinsic_type,
      optional(field('kind', $.kind)),
    ),

    kind: $ => choice(
      seq(optional(alias('*', $.assumed_size)), $._argument_list),
      seq('*', choice(alias(/\d+/, $.number_literal), $.parenthesized_expression))
    ),

    _standalone_type_qualifier: $ => choice(
      caseInsensitive('abstract'),
      caseInsensitive('allocatable'),
      caseInsensitive('asynchronous'),
      caseInsensitive('automatic'),
      prec.right(seq(
        caseInsensitive('codimension'),
        alias($.coarray_index, $.coarray_size),
      )),
      prec.right(seq(
        caseInsensitive('dimension'),
        optional($.argument_list)
      )),
      caseInsensitive('constant'),
      caseInsensitive('contiguous'),
      caseInsensitive('device'),
      caseInsensitive('external'),
      seq(
        caseInsensitive('intent'),
        '(',
        choice(
          caseInsensitive('in'),
          caseInsensitive('out'),
          whiteSpacedKeyword('in', 'out')
        ),
        ')'
      ),
      caseInsensitive('intrinsic'),
      caseInsensitive('managed'),
      caseInsensitive('optional'),
      caseInsensitive('parameter'),
      caseInsensitive('pinned'),
      caseInsensitive('pointer'),
      caseInsensitive('private'),
      caseInsensitive('protected'),
      caseInsensitive('public'),
      seq(
        caseInsensitive('rank'),
        $.argument_list
      ),
      caseInsensitive('save'),
      caseInsensitive('sequence'),
      caseInsensitive('shared'),
      caseInsensitive('static'),
      caseInsensitive('target'),
      caseInsensitive('texture'),
      caseInsensitive('value'),
      caseInsensitive('volatile')
    ),

    // These are split out to avoid clash with assignment statements
    // as it turns out `len` is more likely to be used as a variable
    // name than any of the other qualifiers
    type_qualifier: $ => choice(
      $._standalone_type_qualifier,
      // Next two technically only valid on derived type components
      field('type_param', caseInsensitive('kind')),
      field('type_param', caseInsensitive('len')),
    ),

    _statement: $ => choice(
      alias($.preproc_if_in_statements, $.preproc_if),
      alias($.preproc_ifdef_in_statements, $.preproc_ifdef),
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
      seq(
        optional($.statement_label),
        $._statements,
        $._end_of_statement
      ),
      ';'
    ),

    assignment_statement: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left',$._expression),
      '=',
      field('right',$._expression),
    )),

    subroutine_call: $ => prec(1, seq(
      caseInsensitive('call'),
      // Allow expressions to allow calling type-bound procedures
      field('subroutine', $._expression),
      optional($.cuda_kernel_argument_list),
      optional($.argument_list)
    )),

    cuda_kernel_argument_list: $ => seq(
      '<<<',
      commaSep1($._expression),
      '>>>'
    ),

    _expression: $ => choice(
      $.number_literal,
      $.complex_literal,
      $.string_literal,
      $.boolean_literal,
      $.array_literal,
      $.null_literal,
      $.identifier,
      $.derived_type_member_expression,
      $.logical_expression,
      $.relational_expression,
      $.concatenation_expression,
      $.math_expression,
      $.unary_expression,
      $.parenthesized_expression,
      $.call_expression,
      $.implied_do_loop_expression,
      $.coarray_expression,
      $.conditional_expression,
    ),

    call_expression: $ => prec(
      PREC.CALL,
      seq($._expression, repeat1($.argument_list))
    ),

    _argument_list: $ => prec.dynamic(
      1,
      seq('(', commaSep(choice($._expression, $._argument_item)), ')')
    ),
    argument_list: $ => $._argument_list,

    // precedence is used to prevent conflict with assignment expression
    number_literal: $ => seq(
      choice(
        $._integer_literal,
        $._float_literal,
        $._boz_literal
      ),
      optional($._kind)
    ),

    _kind: $ => seq(
        token.immediate('_'),
        field(
          'kind',
          choice(
            alias(token.immediate(/[a-zA-Z]\w*/), $.identifier),
            alias(token.immediate(/\d+/), $.number_literal)
          )
        )
    ),

    identifier: $ => choice(
      /[a-zA-Z_$][\w$]*/,
      caseInsensitive('allocatable'),
      caseInsensitive('asynchronous'),
      caseInsensitive('automatic'),
      caseInsensitive('block'),
      caseInsensitive('byte'),
      prec(-1, caseInsensitive('call')),
      caseInsensitive('change'),
      caseInsensitive('constant'),
      caseInsensitive('contiguous'),
      caseInsensitive('critical'),
      caseInsensitive('cycle'),
      caseInsensitive('data'),
      caseInsensitive('device'),
      prec(-1, caseInsensitive('dimension')),
      caseInsensitive('do'),
      caseInsensitive('double'),
      caseInsensitive('else'),
      caseInsensitive('elseif'),
      caseInsensitive('end'),
      caseInsensitive('endif'),
      caseInsensitive('entry'),
      caseInsensitive('error'),
      caseInsensitive('event'),
      caseInsensitive('exit'),
      caseInsensitive('external'),
      caseInsensitive('fail'),
      prec(-1, caseInsensitive('flush')),
      caseInsensitive('fmt'),
      caseInsensitive('form'),
      caseInsensitive('format'),
      caseInsensitive('go'),
      caseInsensitive('if'),
      prec(-1, caseInsensitive('include')),
      caseInsensitive('inquire'),
      caseInsensitive('intrinsic'),
      caseInsensitive('kind'),
      caseInsensitive('len'),
      caseInsensitive('lock'),
      caseInsensitive('module'),
      caseInsensitive('null'),
      prec(-1, caseInsensitive('open')),
      caseInsensitive('optional'),
      caseInsensitive('parameter'),
      caseInsensitive('pointer'),
      prec(-1, caseInsensitive('print')),
      caseInsensitive('private'),
      caseInsensitive('public'),
      prec(-1, caseInsensitive('rank')),
      caseInsensitive('read'),
      caseInsensitive('real'),
      caseInsensitive('save'),
      caseInsensitive('select'),
      caseInsensitive('sequence'),
      caseInsensitive('shared'),
      caseInsensitive('static'),
      caseInsensitive('stop'),
      caseInsensitive('sync'),
      caseInsensitive('target'),
      caseInsensitive('texture'),
      prec(-1, caseInsensitive('type')),
      caseInsensitive('unit'),
      caseInsensitive('unlock'),
      caseInsensitive('value'),
      prec(-1, caseInsensitive('wait')),
      prec(-1, caseInsensitive('where')),
      caseInsensitive('write'),
    ),

    comment: $ => token(seq('!', /.*/)),

    _end_of_statement: $ => choice(';', $._external_end_of_statement),
